discussion/kv_engine/184912/184912_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54876: Add support for magma dynamic block sizes

Add 4 new configuration parameters:
magma_seq_tree_data_block_size
magma_seq_tree_index_block_size
magma_key_tree_data_block_size
magma_key_tree_data_block_size

Support for dynamically tunable block sizes for magma sstables.

Change-Id: I3438862d068ca0967c59dffdcff5cb3e857fbff5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2023-01-19 21:58:10.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-19 21:58:22.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/333408/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-19 22:34:54.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/882/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3397:46: error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksSize", magmaStats->DataBlocksSize);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3398:54: error: no member named "DataBlocksCompressSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksCompressSize", magmaStats->DataBlocksCompressSize);
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12: error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetSeqTreeDataBlockSize(value);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:522:12: error: no member named "SetSeqTreeIndexBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetSeqTreeIndexBlockSize(value);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:527:12: error: no member named "SetKeyTreeDataBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetKeyTreeDataBlockSize(value);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:532:12: error: no member named "SetKeyTreeIndexBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetKeyTreeIndexBlockSize(value);
           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/882/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3397:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/882/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1065/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3397): error C2039: "DataBlocksSize": is not a member of "magma::Magma::MagmaStats" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1065/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/853/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/853/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/902/ : FAILURE

Compile error at [2023-01-19T22:28:47.735Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3397:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/902/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/893/ : FAILURE

Compile error at [2023-01-19T22:28:13.934Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3397:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/893/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/895/ : FAILURE

Compile error at [2023-01-19T22:29:04.601Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/895/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/903/ : FAILURE

Failure of GoogleTest "TransportProtocols/InterfacesTest.TlsProperties/Mcbp":

<pre>
[ RUN      ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp
[2023-01-19T22:34:33.134Z] unknown file: Failure
[2023-01-19T22:34:33.134Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for IFCONFIG" thrown in the test body.
[2023-01-19T22:34:33.134Z] [  FAILED  ] TransportProtocols/InterfacesTest.TlsProperties/Mcbp, where GetParam() = Mcbp (2002 ms)
TransportProtocols/InterfacesTest.TlsProperties/Mcbp
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/903/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/874/ : FAILURE

Compile error at [2023-01-19T22:32:08.776Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/874/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/890/ : FAILURE

Compile error at [2023-01-19T22:09:05.132Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3397:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/890/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1177/ : FAILURE

Compile error at [2023-01-19T22:00:54.301Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1177/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22305/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Steve Watanabe
Date: 2023-01-24 19:48:42.000000000
Message: 
Patch Set 2:

(1 comment)
Line:14, /COMMIT_MSG -> According to the design spec https://docs.google.com/document/d/1a6fz8zA8bgUvOeZNFxEQwAqFKyOpodZ_xW0nJm2zT44/edit these should be

magma_keytree_data_blocksize
magma_keytree_index_blocksize
magma_seqtree_data_blocksize
magma_seqtree_index_blocksize

----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2023-01-25 19:21:02.000000000
MISMATCHED INLINE COMMENT
Line:14, /COMMIT_MSG -> Will change spec to match code.
----------------------------------------------------------------------------------------------------------------------
